Додано блок Conlusion у index.html та змінено стилі в style.css

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             </ul>
         </div>
 
+        <div class="conclusion">
+            <h2>Conclusion</h2>
+            <p>Here is some text without any purpose</p>
+        </div>
+
     </div>
 </body>
 
